--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Studio</title>
 </head>
 <body>
-    
+    <!-- Шапка -->
+<header>
+    <nav>
+        <a href="/">WebStudio</a>
+        <ul>
+            <li>
+                <a href="">Студия</a>
+            </li>
+            <li>
+                <a href="">Портфолио</a>
+            </li>
+            <li>
+                <a href="">Контакты</a>
+            </li>
+        </ul>
+    </nav>
+    <address>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </address>
+</header>
 </body>
 </html>
